# TOSS

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  compose.build.yaml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/examples/: export_protocol.rs  export_worker_protocol.rs
backend/migrations/: 202607090001_gitlab_integration.sql  202607090002_gitlab_checkpoint_queue.sql  202607100001_external_git_provider.sql  202607100002_external_git_provider_defaults.sql  202607100003_external_git_inbound.sql  202607100004_object_deletion_queue.sql  202607100005_external_git_phase_constraints.sql  202607100006_git_sync_status_constraint.sql  202607100007_external_git_inbound_recovery.sql  202607110001_project_role_source.sql  202607110002_credential_fingerprints.sql  202607110003_drop_legacy_thumbnail_image_data.sql  202607110004_project_asset_content_revision.sql  202607110005_external_git_provider_id_constraints.sql  202607110006_external_git_repository_fields.sql  202607120001_baseline.sql  202607120001_realtime_consistency.sql  202607120002_collaboration_projection.sql  202607120003_project_settings_revision.sql  202607130001_community_upgrade_continuity.sql  202607140001_document_processing.sql
backend/src/: app_state.rs  database_error.rs  deployment_config.rs  http_response.rs  lib.rs  localized_text.rs  main.rs  native_process.rs  object_cleanup.rs  object_storage.rs  process_lifecycle.rs  protocol_compatibility.rs  text_enum.rs
backend/src/access/: account_policy.rs  auth_settings.rs  auth_settings_http.rs  auth_settings_model.rs  auth_settings_persistence.rs  authorization.rs  federated_account.rs  federated_account_persistence.rs  grant.rs  grant_http.rs  grant_model.rs  grant_persistence.rs  http_error.rs  identity_persistence.rs  identity_queries.rs  mod.rs  oidc_claims.rs  oidc_group.rs  oidc_group_http.rs  oidc_group_model.rs  oidc_group_persistence.rs  oidc_http.rs  oidc_persistence.rs  oidc_policy.rs  oidc_protocol.rs  oidc_state.rs  organization.rs  organization_http.rs  organization_model.rs  organization_persistence.rs  personal_token.rs  personal_token_http.rs  personal_token_model.rs  personal_token_persistence.rs  principal.rs  resolution_persistence.rs  session.rs  session_http.rs  session_persistence.rs  sharing.rs  (+5 more)
backend/src/audit/: mod.rs  persistence.rs
backend/src/collaboration/: bootstrap.rs  connection_lifecycle.rs  mod.rs  persistence.rs  projection.rs  rooms.rs  updates.rs  websocket.rs  yjs_state.rs
backend/src/distribution/: ai_assistant.rs  experience_content.rs  file_format.rs  loader.rs  localized_text.rs  mod.rs  source_files.rs  template_catalog.rs
backend/src/document_processing/: config.rs  context.rs  finalization.rs  mod.rs  model.rs  operation_contract.rs  persistence.rs  pptx.rs  project_input.rs  public_http.rs  worker_http.rs  worker_idempotency.rs  worker_persistence.rs  worker_protocol.rs  workspace_bundle.rs
backend/src/experience/: content.rs  http.rs  mod.rs  model.rs
backend/src/external_repositories/: command.rs  config.rs  connection.rs  connection_http.rs  failure_code.rs  git_command.rs  http_support.rs  linking.rs  linking_http.rs  mod.rs  oauth_http.rs  reauthorization.rs  worker_runtime.rs
backend/src/latex_runtime/: cache.rs  config.rs  http.rs  mod.rs  request.rs  resolution.rs  singleflight.rs  upstream.rs
backend/src/protocol/: mod.rs  realtime.rs  rest.rs  worker.rs
backend/src/server/: ai_runtime.rs  mod.rs  routes.rs  runtime.rs  web_build_manifest.rs
backend/src/templates/: builtin_http.rs  builtin_instantiation.rs  gallery_http.rs  gallery_listing.rs  gallery_model.rs  http_error.rs  mod.rs  organization_grants.rs  organization_grants_http.rs  publication.rs  publication_http.rs  template_status.rs  template_status_http.rs
backend/src/typst_runtime/: archive.rs  cache.rs  catalog.rs  dependencies.rs  http.rs  mod.rs  package.rs  processing_packages.rs  tests.rs  universe.rs
backend/src/versioning/: authors.rs  commit.rs  (+16 more)
workers/: Cargo.toml
workers/latex/: Cargo.toml  Dockerfile  latexmkrc  processor-contract.json  toss-latex-worker.apparmor
workers/processing-sdk/: Cargo.toml
(+620 files in other folders)
