[workspace]
members = ["processing-sdk", "latex"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.97"
license = "AGPL-3.0-only"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time", "fs", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"
allow_attributes_without_reason = "deny"
