[package]
name = "toss-latex-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toss-processing-sdk = { path = "../processing-sdk" }

[[bin]]
name = "toss-latex-worker"
path = "src/main.rs"
